Continue web model implementation.

--- a/src/main/resources/templates/stats.html
+++ b/src/main/resources/templates/stats.html
@@ -9,5 +9,5 @@ stats <div id = "counter"> counter </div>
 <button id = "button" onclick = "testClick()"> click </button>
 <ul id ="list"></ul>
 </body>
-<script src="/js/stats.js">click</script>
+<script src="/js/stats.js"></script>
 </html>
