--- a/src/main/resources/templates/data_manipulation.html
+++ b/src/main/resources/templates/data_manipulation.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Data Manipulation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Управление данными</title>
 </head>
 <body>
-manipulate
+<h1>Управление данными</h1>
+
+<form id="actForm">
+    <h2>Среднее время выполнения</h2>
+    <input type="text" id="actInput" placeholder="Введите время в формате PT1H30M">
+    <button type="submit">Обновить</button>
+</form>
+
+<form id="delayForm">
+    <h2>Задержка</h2>
+    <input type="number" id="delayInput" placeholder="Введите задержку">
+    <button type="submit">Обновить</button>
+</form>
+
+<script src = "/js/data_manipulation.js"></script>
 </body>
 </html>
