--- a/src/main/resources/templates/stats.html
+++ b/src/main/resources/templates/stats.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Statistics</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
-stats <div id = "counter"> counter </div>
-<button id = "button" onclick = "testClick()"> click </button>
-<ul id ="list"></ul>
-</body>
+<div id="statistics"></div>
 <script src="/js/stats.js"></script>
+</body>
 </html>
